--- a/seo/views/page/partials/head.ejs
+++ b/seo/views/page/partials/head.ejs
@@ -6,7 +6,7 @@
 <title>商赢金服</title>
 <link rel="dns-prefetch" href="//www.sy8.com" />
 <!-- CSS -->
-<link rel="stylesheet" href="https://www.sy8.com/css/reset.css">
+<link rel="stylesheet" href="https://www.sy8.com/css/public.css">
 <link rel="stylesheet" href="https://www.sy8.com/css/style.css">
 <link rel="stylesheet" href="https://www.sy8.com/css/lightbox.min.css">
 <link rel="stylesheet" href="https://www.sy8.com/css/common.css">
